--- a/.github/workflows/reveal_your_secrets.yml
+++ b/.github/workflows/reveal_your_secrets.yml
@@ -15,4 +15,5 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo "The thing is: ${{ SECRETS.THE_THING }}."
+      - run: |
+          echo "The thing is: ${{ secrets.THE_THING }}."
